blog/infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1 # number of pods running some particular images
  selector:
    matchLabels:
      app: posts
  template: # pod configuration
    metadata:
      labels:
        app: posts
    spec: # pod configuration options
      containers: # array of container
        - name: posts
          image: acejs/blog-posts
---
apiVersion: v1
kind: Service
metadata:
  name: posts-nodeport-srv
spec:
  type: NodePort # mainly for dev purposes (in prod we would use load balancer)
  selector:
    app: posts # we specify to this service to find all different pods with the label "app: posts" to expose them to the outside world
  ports: # ports to expose on the target pod 
    - name: posts # just for log purposes
      protocol: TCP
      port: 4000 # NodePort
      targetPort: 4000 # pod   
---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
