blog/infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true' # allows us to use path with param like fore comments service 
spec:
  rules:
    - host: my-blog.io
      http:
        paths:
          - path: /posts/create
            backend: 
              serviceName: posts-clusterip-srv
              servicePort: 4000
          - path: /posts
            backend: 
              serviceName: query-clusterip-srv
              servicePort: 4002
          - path: /posts/?(.*)/comments
            backend: 
              serviceName: comments-clusterip-srv
              servicePort: 4001
          - path: /?(.*) # allows react routing
            backend: 
              serviceName: client-clusterip-srv
              servicePort: 3000
